// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Workflow > graph > should be correct for a basic conditional node case 1`] = `
"{
    ConditionalNode.Ports.branch_1 >> TemplatingNode,
    ConditionalNode.Ports.branch_2 >> TemplatingNode2,
}
"
`;

exports[`Workflow > graph > should be correct for a basic merge between a node and an edge 1`] = `
"{
    TemplatingNode >> TemplatingNode3,
    TemplatingNode2,
} >> MergeNode
"
`;

exports[`Workflow > graph > should be correct for a basic merge node and an additional edge 1`] = `
"(
    {
        TemplatingNode,
        TemplatingNode2,
    }
    >> MergeNode
    >> TemplatingNode3
)
"
`;

exports[`Workflow > graph > should be correct for a basic merge node case 1`] = `
"{
    TemplatingNode,
    TemplatingNode2,
} >> MergeNode
"
`;

exports[`Workflow > graph > should be correct for a basic merge node case of multiple nodes 1`] = `
"{
    TemplatingNode,
    TemplatingNode2,
    TemplatingNode3,
} >> MergeNode
"
`;

exports[`Workflow > graph > should be correct for a basic multiple nodes case 1`] = `
"{
    TemplatingNode,
    TemplatingNode2,
}
"
`;

exports[`Workflow > graph > should be correct for a basic single edge case 1`] = `
"TemplatingNode >> TemplatingNode2
"
`;

exports[`Workflow > graph > should be correct for a basic single node case 1`] = `
"TemplatingNode
"
`;

exports[`Workflow > graph > should be correct for a longer branch 1`] = `
"TemplatingNode >> TemplatingNode2 >> TemplatingNode3
"
`;

exports[`Workflow > graph > should be correct for a nested conditional node within a set 1`] = `
"{
    ConditionalNode.Ports.branch_1 >> TemplatingNode,
    ConditionalNode.Ports.branch_2
    >> {
        ConditionalNode2.Ports.branch_2
        >> {
            TemplatingNode3,
            TemplatingNode4,
        },
        TemplatingNode2,
    },
}
"
`;

exports[`Workflow > graph > should be correct for a node to a set 1`] = `
"TemplatingNode >> {
    TemplatingNode2,
    TemplatingNode3,
}
"
`;

exports[`Workflow > graph > should be correct for a node to a set to a node 1`] = `
"(
    TemplatingNode
    >> {
        TemplatingNode2,
        TemplatingNode3,
    }
    >> TemplatingNode4
)
"
`;

exports[`Workflow > graph > should be correct for a single port pointing to a set 1`] = `
"ConditionalNode.Ports.branch_1 >> {
    TemplatingNode,
    TemplatingNode2,
}
"
`;

exports[`Workflow > graph > should be correct for port within set to a set 1`] = `
"{
    ConditionalNode.Ports.branch_1 >> TemplatingNode,
    ConditionalNode.Ports.branch_2
    >> {
        TemplatingNode2,
        TemplatingNode3,
    },
}
"
`;

exports[`Workflow > graph > should be correct for set of a branch and a node 1`] = `
"{
    TemplatingNode >> TemplatingNode2,
    TemplatingNode3,
}
"
`;

exports[`Workflow > graph > should be correct for set of a branch and a node to a node 1`] = `
"(
    {
        TemplatingNode >> TemplatingNode3 >> TemplatingNode4,
        TemplatingNode2,
    }
    >> MergeNode
    >> TemplatingNode5
)
"
`;

exports[`Workflow > graph > should be correct for three nodes 1`] = `
"{
    TemplatingNode,
    TemplatingNode2,
    TemplatingNode3,
}
"
`;

exports[`Workflow > graph > should be correct for two branches from the same node 1`] = `
"TemplatingNode >> {
    MergeNode,
    TemplatingNode2 >> MergeNode,
}
"
`;

exports[`Workflow > graph > should be correct for two branches merging from sets 1`] = `
"{
    ConditionalNode.Ports.branch_1
    >> TemplatingNode
    >> {
        TemplatingNode3 >> TemplatingNode4,
        TemplatingNode5,
    },
    ConditionalNode.Ports.branch_2 >> TemplatingNode2 >> TemplatingNode3,
}
"
`;

exports[`Workflow > graph > should be pointing to the correct terminal nodes from a nested set of conditionals 1`] = `
"{
    FirstCheckNode.Ports.if_port 
    >> FirstInnerCheckNode 
    >> SecondInnerCheckNode
    >> FinalCheckNode,
    FirstCheckNode.Ports.else_port
    >> {
        FinalCheckNode.Ports.if_port >> InnerTerminalNode,
        FinalCheckNode.Ports.else_port >> OuterOutputNode,
    },
}
"
`;

exports[`Workflow > graph > should define nested sets of nodes without compilation errors 1`] = `
"TopNode >> {
    OutputTopNode,
    OutputMiddleNode,
    OutputBottomNode,
}
"
`;

exports[`Workflow > graph > should handle a simple edge of generic nodes 1`] = `
"StartNode >> EndNode
"
`;

exports[`Workflow > graph > should show errors for a node pointing to non-existent node 1`] = `
"TemplatingNode
"
`;

exports[`Workflow > graph > should support an edge between two sets 1`] = `
"{
    TopLeftNode
    >> {
        TopRightNode,
        BottomRightNode,
    },
    BottomLeftNode
    >> {
        TopRightNode,
        BottomRightNode,
    },
}
"
`;
